# cpp-go-messanger

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake.txt  common.cmake  go.work  go.work.sum
api_gateway/: AuthClient.cpp  AuthClient.hpp  AuthServer.pb.h  CMakeLists.txt  ChatClient.cpp  ChatClient.hpp  ChatServer.grpc.pb.cc  ChatServer.grpc.pb.h  ChatServer.pb.cc  ChatServer.pb.h  DBClient.cpp  DBClient.hpp  Dockerfile  Server.cpp  Server.hpp  cpp.txt  hpp.txt  main.cpp  websocket_proxy.cpp  websocket_proxy.hpp
auth_server/: Auth.cpp  Auth.hpp  AuthServer.grpc.pb.h  AuthService.hpp  AuthServise.hpp  CMakeLists.txt  DBClient  DBClient.hpp  DatabaseHandler.grpc.pb.cc  DatabaseHandler.grpc.pb.h  DatabaseHandler.hpp  DatabaseHandler.pb.cc  DatabaseHandler.pb.h  Dockerfile  Hasher.cpp  Hasher.hpp  main.cpp
chat_server/: Dockerfile  char_server.go  chat_room.go  chat_server.go  go.mod  go.sum  websockets.go
chat_server/github.com/bayonetto666/messanger/protos/: ChatServer.pb.go  ChatServer_grpc.pb.go
client/: client.go  go.mod  go.sum
common/: AuthClient.cpp  AuthClient.hpp  AuthServer.grpc.pb.cc  AuthServer.pb.cc  ChatClient.cpp  ChatServer.grpc.pb.cc  ChatServer.grpc.pb.h  ChatServer.pb.cc  ChatServer.pb.h  DBClient.cpp  DBClient.hpp  DatabaseHandler.pb.h
database/: Dockerfile
database_server/: CMakeLists.txt  DatabaseHandler.cpp  DatabaseHandler.grpc.pb.cc  DatabaseHandler.grpc.pb.h  DatabaseHandler.hpp  DatabaseHandler.pb.cc  DatabaseHandler.pb.h  DatabaseHandler.proto  DatabaseService.hpp  Dockerfile  main.cpp
protos/: AuthServer.proto  ChatServer.proto  DatabaseHandler.proto
temp/: CMakeLists.txt  ChatServer.pb.go  ChatServer_grpc.pb.go
